--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img src="img/ilustracion1.svg" alt="">
         <div class="contenedor-textos-main">
             <h2 class="titulo left">Title of section</h2>
-            <p class="parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt enim reiciendis
+            <p class="parrafo">Lorem ipsum, dolor sit amet lorem consectetur adipisicing elit. Incidunt enim reiciendis
                 molestias nam tempore. Ullam hic accusantium eligendi ipsam corrupti!</p>
             <a href="" class="cta">Learn more</a>
         </div>
